# snake

./: Makefile  README.md  pyproject.toml  stream.org  test_terminal_display.py
app/: main.py
assets/: diagram.txt
game/: constants.py  game_state.py  main.py  play.py  title.py  util.py
lib/: display_border.py  game_runner.py  grid.py  player_input.py  snake_object.py  splash_screen.py  start_up_screen.py  terminal_display.py  terminal_display_object.py  test_input.py
notes/: packaging_the_game.org  user_input.org
tests/: pygame_inputs.py  test_animate_move_snake.py  test_input.py  test_move_snake.py  test_terminal_display.py
viz/: grid.py  loop.py  multi_line_anim.py
