[tool.poetry]
name = "snake"
version = "0.1.0"
description = "The classic game, now with political elements"
authors = ["Joseph Daws <daws.joseph@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
